--- a/lesson2/Gemfile
+++ b/lesson2/Gemfile
@@ -1,6 +1,6 @@
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
+gem 'capybara', '~> 3.1'
 gem 'cucumber', '~> 3.1.0'
 gem 'rspec', '~> 3.7.0'
-gem 'capybara', '~> 3.1'
 gem 'selenium-webdriver', '~> 3.12'
