--- a/lesson4/Gemfile
+++ b/lesson4/Gemfile
@@ -1,8 +1,8 @@
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
+gem 'capybara', '~> 3.1'
 gem 'cucumber', '~> 3.1.0'
 gem 'rspec', '~> 3.7.0'
-gem 'capybara', '~> 3.1'
 gem 'selenium-webdriver', '~> 3.12'
 gem 'site_prism',
     git: 'https://github.com/bukalapak/site_prism.git',
