--- a/lesson4/Gemfile
+++ b/lesson4/Gemfile
@@ -4,6 +4,4 @@ gem 'capybara', '~> 3.1'
 gem 'cucumber', '~> 3.1.0'
 gem 'rspec', '~> 3.7.0'
 gem 'selenium-webdriver', '~> 3.12'
-gem 'site_prism',
-    git: 'https://github.com/bukalapak/site_prism.git',
-    branch: 'bukalapak_dev'
+gem 'site_prism'
